--- a/spring-petclinic-api-gateway/src/main/resources/bootstrap.yml
+++ b/spring-petclinic-api-gateway/src/main/resources/bootstrap.yml
@@ -10,3 +10,10 @@ spring:
   cloud:
     config:
       uri: http://config-server:8888
+---
+spring:
+  profiles: k8s
+  cloud:
+    config:
+      uri: http://config-server.svc.local:8888
+      
