--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
 						<artifactId>spring-boot-maven-plugin</artifactId>
 						<configuration>
 							<fork>true</fork>
+							<configuration>
+								<image>
+									<name>odedia/${project.artifactId}</name>
+								</image>
+							</configuration>
 						</configuration>
 						<executions>
 							<execution>
