--- a/k8s/customers-service-deployment.yaml
+++ b/k8s/customers-service-deployment.yaml
@@ -9,7 +9,7 @@ metadata:
     io.kompose.service: customers-service
   name: customers-service
 spec:
-  replicas: 1
+  replicas: 10
   strategy: {}
   template:
     metadata:
@@ -18,17 +18,25 @@ spec:
         io.kompose.service: customers-service
     spec:
       containers:
-      - command:
-        - ./wait-for-it.sh
-        - discovery-server:8761
-        - --timeout=60
-        - --
-        - java
-        - -Djava.security.egd=file:/dev/./urandom
-        - -jar
-        - /app.jar
-        image: mszarlinski/spring-petclinic-customers-service
+      - image: odedia/spring-petclinic-customers-service
         name: customers-service
+        livenessProbe:
+          httpGet:
+            port: 8761
+            path: /actuator/health
+          initialDelaySeconds: 40
+          periodSeconds: 2
+        readinessProbe:
+          httpGet:
+            port: 8761
+            path: /actuator/health
+          initialDelaySeconds: 15
+        resources:
+          limits:
+            memory: 1Gi
+        env:
+        - name: SPRING_PROFILES_ACTIVE
+          value: k8s
         ports:
         - containerPort: 8081
         resources: {}
