--- a/k8s/config-server-deployment.yaml
+++ b/k8s/config-server-deployment.yaml
@@ -24,7 +24,7 @@ spec:
           httpGet:
             port: 8888
             path: /actuator/health
-          initialDelaySeconds: 40
+          initialDelaySeconds: 60
           periodSeconds: 2
         readinessProbe:
           httpGet:
@@ -39,3 +39,25 @@ spec:
         resources: {}
       restartPolicy: Always
 status: {}
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    kompose.cmd: kompose convert
+    kompose.version: 1.2.0 (99f88ef)
+  creationTimestamp: null
+  labels:
+    io.kompose.service: config-server
+  name: config-server
+spec:
+  ports:
+  - name: "8888"
+    port: 8888
+    targetPort: 8888
+  selector:
+    io.kompose.service: config-server
+status:
+  loadBalancer: {}
+
