--- a/k8s/for_later/admin-server-deployment.yaml
+++ b/k8s/for_later/admin-server-deployment.yaml
@@ -6,8 +6,8 @@ metadata:
     kompose.version: 1.2.0 (99f88ef)
   creationTimestamp: null
   labels:
-    io.kompose.service: discovery-server
-  name: discovery-server
+    io.kompose.service: admin-server
+  name: admin-server
 spec:
   replicas: 3
   strategy: {}
@@ -15,20 +15,20 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: discovery-server
+        io.kompose.service: admin-server
     spec:
       containers:
-      - image: odedia/spring-petclinic-discovery-server
-        name: discovery-server
+      - image: odedia/spring-petclinic-admin-server
+        name: admin-server
         livenessProbe:
           httpGet:
-            port: 8761
+            port: 9090
             path: /actuator/health
-          initialDelaySeconds: 40
+          initialDelaySeconds: 60
           periodSeconds: 2
         readinessProbe:
           httpGet:
-            port: 8761
+            port: 9090
             path: /actuator/health
           initialDelaySeconds: 15
         resources:
@@ -38,7 +38,7 @@ spec:
         - name: SPRING_PROFILES_ACTIVE
           value: k8s
         ports:
-        - containerPort: 8761
+        - containerPort: 9090
         resources: {}
       restartPolicy: Always
 status: {}
