--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.0.RC1</version>
+		<version>2.3.0.RELEASE</version>
 	</parent>
 
 	<groupId>org.springframework.samples</groupId>
@@ -30,7 +30,7 @@
 		<java.version>11</java.version>
 		<assertj.version>3.11.1</assertj.version>
 
-		<spring-boot.version>2.3.0.RC1</spring-boot.version>
+		<spring-boot.version>2.3.0.RELEASE</spring-boot.version>
 		<spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
 		<wavefront.version>2.0.0-RC1</wavefront.version>
 
