--- a/spring-petclinic-api-gateway/pom.xml
+++ b/spring-petclinic-api-gateway/pom.xml
@@ -74,28 +74,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.cloud</groupId>
-					<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework.cloud</groupId>
-					<artifactId>spring-cloud-netflix-ribbon</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.netflix.ribbon</groupId>
-					<artifactId>ribbon-eureka</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework.cloud</groupId>
-					<artifactId>spring-cloud-netflix-hystrix</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
 		<dependency>
@@ -103,15 +81,6 @@
 			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
 
-		<!-- Spring Cloud Services -->
-		<dependency>
-			<groupId>io.pivotal.spring.cloud</groupId>
-			<artifactId>spring-cloud-services-starter-config-client</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.pivotal.spring.cloud</groupId>
-			<artifactId>spring-cloud-services-starter-service-registry</artifactId>
-		</dependency>
 
 		<!-- Third parties -->
 		<dependency>
@@ -215,17 +184,108 @@
 	</build>
 
 	<profiles>
+
 		<profile>
-			<id>buildDocker</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.spotify</groupId>
-						<artifactId>docker-maven-plugin</artifactId>
-						<version>${docker.plugin.version}</version>
-					</plugin>
-				</plugins>
-			</build>
+			<id>local</id>
+			<dependencies>
+				<!-- Spring Cloud Services -->
+				<dependency>
+					<groupId>io.pivotal.spring.cloud</groupId>
+					<artifactId>spring-cloud-services-starter-config-client</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>io.pivotal.spring.cloud</groupId>
+					<artifactId>spring-cloud-services-starter-service-registry</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+					<exclusions>
+						<exclusion>
+							<groupId>org.springframework.cloud</groupId>
+							<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>org.springframework.cloud</groupId>
+							<artifactId>spring-cloud-netflix-ribbon</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>com.netflix.ribbon</groupId>
+							<artifactId>ribbon-eureka</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>org.springframework.cloud</groupId>
+							<artifactId>spring-cloud-netflix-hystrix</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>cloud</id>
+			<dependencies>
+				<!-- Spring Cloud Services -->
+				<dependency>
+					<groupId>io.pivotal.spring.cloud</groupId>
+					<artifactId>spring-cloud-services-starter-config-client</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>io.pivotal.spring.cloud</groupId>
+					<artifactId>spring-cloud-services-starter-service-registry</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+					<exclusions>
+						<exclusion>
+							<groupId>org.springframework.cloud</groupId>
+							<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>org.springframework.cloud</groupId>
+							<artifactId>spring-cloud-netflix-ribbon</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>com.netflix.ribbon</groupId>
+							<artifactId>ribbon-eureka</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>org.springframework.cloud</groupId>
+							<artifactId>spring-cloud-netflix-hystrix</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+
+			</dependencies>
+		</profile>
+
+
+		<profile>
+			<id>k8s</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-starter-kubernetes</artifactId>
+					<exclusions>
+						<exclusion>
+							<groupId>org.springframework.cloud</groupId>
+							<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>org.springframework.cloud</groupId>
+							<artifactId>spring-cloud-netflix-ribbon</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>com.netflix.ribbon</groupId>
+							<artifactId>ribbon-eureka</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>org.springframework.cloud</groupId>
+							<artifactId>spring-cloud-netflix-hystrix</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+			</dependencies>
 		</profile>
 	</profiles>
 
