--- a/spring-petclinic-vets-service/src/main/resources/bootstrap.yml
+++ b/spring-petclinic-vets-service/src/main/resources/bootstrap.yml
@@ -14,6 +14,6 @@ spring:
 spring:
   profiles: k8s
   cloud:
-    config:
-      uri: http://config-server.default.svc.cluster.local:8888
-      
+    kubernetes:
+      config:
+        name: pet-clinic-config
