--- a/spring-petclinic-visits-service/pom.xml
+++ b/spring-petclinic-visits-service/pom.xml
@@ -178,24 +178,10 @@
 				<dependency>
 					<groupId>org.springframework.cloud</groupId>
 					<artifactId>spring-cloud-starter-kubernetes</artifactId>
-					<exclusions>
-						<exclusion>
-							<groupId>org.springframework.cloud</groupId>
-							<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-						</exclusion>
-						<exclusion>
-							<groupId>org.springframework.cloud</groupId>
-							<artifactId>spring-cloud-netflix-ribbon</artifactId>
-						</exclusion>
-						<exclusion>
-							<groupId>com.netflix.ribbon</groupId>
-							<artifactId>ribbon-eureka</artifactId>
-						</exclusion>
-						<exclusion>
-							<groupId>org.springframework.cloud</groupId>
-							<artifactId>spring-cloud-netflix-hystrix</artifactId>
-						</exclusion>
-					</exclusions>
+				</dependency>
+				<dependency>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-starter-kubernetes-config</artifactId>
 				</dependency>
 			</dependencies>
 		</profile>
