--- a/k8s/api-gateway-service.yaml
+++ b/k8s/api-gateway-service.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     io.kompose.service: api-gateway
   name: api-gateway
+  namespace: spring-pet-clinic
 spec:
   ports:
   - name: "8080"
