--- a/k8s/vets-service-deployment.yaml
+++ b/k8s/vets-service-deployment.yaml
@@ -8,8 +8,9 @@ metadata:
   labels:
     io.kompose.service: vets-service
   name: vets-service
+  namespace: spring-pet-clinic
 spec:
-  replicas: 3
+  replicas: 1
   strategy: {}
   template:
     metadata:
