--- a/k8s/vets-service-service.yaml
+++ b/k8s/vets-service-service.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     io.kompose.service: vets-service
   name: vets-service
+  namespace: spring-pet-clinic
 spec:
   ports:
   - name: "8080"
