--- a/k8s/visits-service-service.yaml
+++ b/k8s/visits-service-service.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     io.kompose.service: visits-service
   name: visits-service
+  namespace: spring-pet-clinic  
 spec:
   ports:
   - name: "8080"
