--- a/spring-petclinic-api-gateway/src/main/resources/bootstrap.yml
+++ b/spring-petclinic-api-gateway/src/main/resources/bootstrap.yml
@@ -17,6 +17,9 @@ spring:
     config:
       enabled: false
     kubernetes:
+      reload:
+        strategy: restart-context
+        enabled: true
       config:
         enabled: true
         name: pet-clinic-config
