--- a/k8s/01-config-map.yaml
+++ b/k8s/01-config-map.yaml
@@ -18,10 +18,6 @@ data:
 
     # Logging
     logging.level.org.springframework: INFO
-    logging.level.org.hibernate.SQL: DEBUG
-    logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-    logging.level.org.springframework.jdbc.core.JdbcTemplate: DEBUG
-    logging.level.org.springframework.jdbc.core.StatementCreatorUtils: TRACE
 
     # Metrics
     management:
@@ -39,7 +35,7 @@ data:
           prometheus:
             enabled: true
           wavefront:
-            enabled: false
+            enabled: true
       security:
         enabled: false
 
