--- a/k8s/api-gateway-deployment.yaml
+++ b/k8s/api-gateway-deployment.yaml
@@ -37,7 +37,17 @@ spec:
             memory: 1Gi
         env:
         - name: SPRING_PROFILES_ACTIVE
-          value: k8s
+          value: kubernetes
+        - name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_APITOKEN
+          valueFrom:
+             secretKeyRef:
+               name: wavefront
+               key: token
+        - name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_URI
+          valueFrom:
+             secretKeyRef:
+               name: wavefront
+               key: uri
         ports:
         - containerPort: 8080
         resources: {}
