--- a/k8s/vets-service-deployment.yaml
+++ b/k8s/vets-service-deployment.yaml
@@ -38,6 +38,16 @@ spec:
         env:
         - name: SPRING_PROFILES_ACTIVE
           value: k8s
+        - name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_APITOKEN
+          valueFrom:
+             secretKeyRef:
+               name: wavefront
+               key: token
+        - name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_URI
+          valueFrom:
+             secretKeyRef:
+               name: wavefront
+               key: uri
         ports:
         - containerPort: 8080
         resources: {}
