--- a/k8s/api-gateway-deployment.yaml
+++ b/k8s/api-gateway-deployment.yaml
@@ -25,7 +25,7 @@ spec:
           httpGet:
             port: 8080
             path: /actuator/health
-          initialDelaySeconds: 60
+          initialDelaySeconds: 90
           periodSeconds: 2
         readinessProbe:
           httpGet:
@@ -35,19 +35,14 @@ spec:
         resources:
           limits:
             memory: 1Gi
+          requests:
+            cpu: 2000m
+            memory: 1Gi
         env:
         - name: SPRING_PROFILES_ACTIVE
           value: kubernetes
-        - name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_APITOKEN
-          valueFrom:
-             secretKeyRef:
-               name: wavefront
-               key: token
         - name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_URI
-          valueFrom:
-             secretKeyRef:
-               name: wavefront
-               key: uri
+          value: proxy://wavefront-proxy.wavefront.svc.cluster.local:2878
         ports:
         - containerPort: 8080
         resources: {}
