--- a/k8s/cluster-init/01-namespace.yaml
+++ b/k8s/cluster-init/01-namespace.yaml
@@ -2,3 +2,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: spring-pet-clinic
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: wavefront
+
