--- a/k8s/vets-service-deployment.yaml
+++ b/k8s/vets-service-deployment.yaml
@@ -25,7 +25,7 @@ spec:
           httpGet:
             port: 8080
             path: /actuator/health
-          initialDelaySeconds: 60
+          initialDelaySeconds: 90
           periodSeconds: 2
         readinessProbe:
           httpGet:
@@ -35,19 +35,23 @@ spec:
         resources:
           limits:
             memory: 1Gi
+          requests:
+            cpu: 2000m
+            memory: 1Gi
         env:
         - name: SPRING_PROFILES_ACTIVE
-          value: k8s
-        - name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_APITOKEN
+          value: kubernetes
+        - name: SPRING_DATASOURCE_URL
+          value: jdbc:mysql://vets-db-mysql.spring-pet-clinic.svc.cluster.local:3306/my_database?queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=customers-db
+        - name: SPRING_DATASOURCE_USERNAME
+          value: root
+        - name: SPRING_DATASOURCE_PASSWORD
           valueFrom:
              secretKeyRef:
-               name: wavefront
-               key: token
+               name: vets-db-mysql
+               key: mysql-root-password
         - name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_URI
-          valueFrom:
-             secretKeyRef:
-               name: wavefront
-               key: uri
+          value: proxy://wavefront-proxy.wavefront.svc.cluster.local:2878
         ports:
         - containerPort: 8080
         resources: {}
