--- a/spring-petclinic-api-gateway/pom.xml
+++ b/spring-petclinic-api-gateway/pom.xml
@@ -199,6 +199,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>api-gateway</finalName>
 		<plugins>
 			<plugin>
 				<groupId>ro.isdc.wro4j</groupId>
@@ -233,6 +234,34 @@
 						<version>${mockito.version}</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<configuration>
+						<image>
+							<name>odedia/${project.artifactId}</name>
+						</image>
+					</configuration>
+				</configuration>
+				<executions>
+					<execution>
+						<!-- Spring Boot Actuator displays build-related information if a 
+							META-INF/build-info.properties file is present -->
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+						<configuration>
+							<additionalProperties>
+								<encoding.source>${project.build.sourceEncoding}</encoding.source>
+								<encoding.reporting>${project.reporting.outputEncoding}</encoding.reporting>
+								<java.source>${maven.compiler.source}</java.source>
+								<java.target>${maven.compiler.target}</java.target>
+							</additionalProperties>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -306,7 +335,7 @@
 
 
 		<profile>
-			<id>k8s</id>
+			<id>kubernetes</id>
 	        <activation>
 	            <activeByDefault>true</activeByDefault>
 	        </activation>
