--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
   - name: customers-service
-    path: spring-petclinic-customers-service/target/spring-petclinic-customers-service-2.3.jar
+    path: spring-petclinic-customers-service/target/spring-petclinic-customers-service-2.3.1.RELEASE.jar
     buildpacks:
       - java_buildpack_offline
     health-check-type: http
@@ -16,10 +16,9 @@ applications:
       - customers-db
       - config
       - registry
-      - wavefront
 
   - name: vets-service
-    path: spring-petclinic-vets-service/target/spring-petclinic-vets-service-2.3.jar
+    path: spring-petclinic-vets-service/target/spring-petclinic-vets-service-2.3.1.RELEASE.jar
     buildpacks:
       - java_buildpack_offline
     health-check-type: http
@@ -34,10 +33,9 @@ applications:
       - vets-db
       - config
       - registry
-      - wavefront
 
   - name: visits-service
-    path: spring-petclinic-visits-service/target/spring-petclinic-visits-service-2.3.jar
+    path: spring-petclinic-visits-service/target/spring-petclinic-visits-service-2.3.1.RELEASE.jar
     buildpacks:
       - java_buildpack_offline
     health-check-type: http
@@ -52,10 +50,9 @@ applications:
       - visits-db
       - config
       - registry
-      - wavefront
 
   - name: api-gateway
-    path: spring-petclinic-api-gateway/target/spring-petclinic-api-gateway-2.3.jar
+    path: spring-petclinic-api-gateway/target/spring-petclinic-api-gateway-2.3.1.RELEASE.jar
     buildpacks:
       - java_buildpack_offline
     health-check-type: http
@@ -67,4 +64,3 @@ applications:
     services:
       - config
       - registry
-      - wavefront
